Added JMeter SSH plugin

--- a/bin/saveservice.properties
+++ b/bin/saveservice.properties
@@ -313,6 +313,9 @@ SoapSamplerGui=org.apache.jmeter.protocol.http.control.gui.SoapSamplerGui
 SplineVisualizer=org.apache.jmeter.visualizers.SplineVisualizer
 # Originally deleted in r397955 as class is obsolete; needed for compat.
 SqlConfigGui=org.apache.jmeter.protocol.jdbc.config.gui.SqlConfigGui
+SSHSampler=org.dreamcat.jmeter.protocol.ssh.sampler.SSHSampler
+SSHCommandSampler=org.dreamcat.jmeter.protocol.ssh.sampler.SSHCommandSampler
+SSHSFTPSampler=org.dreamcat.jmeter.protocol.ssh.sampler.SSHSFTPSampler
 StaticHost=org.apache.jmeter.protocol.http.control.StaticHost
 StatGraphVisualizer=org.apache.jmeter.visualizers.StatGraphVisualizer
 StatVisualizer=org.apache.jmeter.visualizers.StatVisualizer
