--- a/src/core/src/main/resources/org/apache/jmeter/gui/util/textarea.properties
+++ b/src/core/src/main/resources/org/apache/jmeter/gui/util/textarea.properties
@@ -51,6 +51,7 @@ prolog = text/plain
 rexx = text/plain
 rhino = text/javascript
 ruby = text/ruby
+shell = text/unix
 sql = text/sql
 text = text/plain
 vbscript = text/vb
