--- a/gradle.properties
+++ b/gradle.properties
@@ -91,6 +91,7 @@ jdom.version=1.1.3
 jmespath-core.version=0.3.0
 jmespath-jackson.version=0.3.0
 jodd.version=5.0.13
+jsch.version=0.1.55
 json-path.version=2.4.0
 json-smart.version=2.3
 jsoup.version=1.12.1
