--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,17 @@ on:
 
 jobs:
   windows:
-    name: 'Windows (JDK 13)'
+    name: 'Windows (JDK 11)'
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1.1.0
       with:
         fetch-depth: 50
-    - name: 'Set up JDK 13'
+    - name: 'Set up JDK 11'
       uses: actions/setup-java@v1
       with:
-        java-version: 13
+        java-version: 11
     - name: 'Test'
       shell: bash
       run: |
-        ./gradlew --no-parallel build -x distTar -x distTarSource
+        ./gradlew build -x distZip
