--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
     - name: 'Test'
       shell: bash
       run: |
-        ./gradlew --no-parallel build -x distTar -x distTarSource
+        ./gradlew --no-parallel build -x distTar -x distTarSource -Duser.language=en -Duser.country=en -PskipCheckstyle
