Support more authentication option (publickey and password)

--- a/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHCommandSamplerResources.properties
+++ b/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHCommandSamplerResources.properties
@@ -26,12 +26,19 @@ port.displayName=Port
 port.shortDescription=Remote Port on which SSHD is listening
 command.displayName=Commands
 command.shortDescription=Commands to execute on the server
+sshkeyfile.displayName=SSH Key File
+sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
+passphrase.displayName=Passphrase
+passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
 connectionTimeout.displayName=Connection Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 useReturnCode.displayName=Use return code
 useReturnCode.shortDescription=A return code different from 0 makes the sampler fail
+useTty.displayName=Use TTY
+useTty.shortDescription=Use TTY when establishing the SSH session
 printStdErr.displayName=Print Standard Error output
 printStdErr.shortDescription=Prints the standard error output in the results
 server.displayName=Server
 user.displayName=Login
+keyFile.displayName=Client certificate
 execute.displayName=Execute
