--- a/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHSFTPSamplerResources.properties
+++ b/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHSFTPSamplerResources.properties
@@ -26,6 +26,10 @@ port.displayName=Port
 port.shortDescription=Remote Port on which SSHD is listening
 source.displayName=Source path
 source.shortDescription=Source path of the transfer (can be either local or on the server)
+sshkeyfile.displayName=SSH Key File
+sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
+passphrase.displayName=Passphrase
+passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
 connectionTimeout.displayName=Connection Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 destination.displayName=Destination path
@@ -37,5 +41,6 @@ get.displayName=GET
 put.displayName=PUT
 server.displayName=Server
 user.displayName=Login
+keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
